tests/errors/semantic/blocking/INIT_NDARRAY_WITH_INHOMOG_LIST.py
# pylint: disable=missing-function-docstring, missing-module-docstring/
import numpy as np

a = [1, 2, 3.3]
b = np.array(a)

